--- a/app/src/main/res/layout/list_item_layout.xml
+++ b/app/src/main/res/layout/list_item_layout.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="100dp"
+    android:layout_height="150dp"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_marginBottom="1dp"
     android:orientation="vertical">
@@ -10,30 +10,39 @@
         android:id="@+id/book_cardview"
         android:layout_width="fill_parent"
         android:layout_height="match_parent"
-        android:layout_margin="5dp"
+        android:layout_margin="3dp"
         card_view:cardCornerRadius="2dp">
 
-        <RelativeLayout
-
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent">
-
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="5dp">
+            <ImageView
+                android:layout_width="90dp"
+                android:layout_height="152dp"
+                android:scaleType="fitXY"
+                card_view:layout_constraintStart_toStartOf="parent"
+                card_view:layout_constraintTop_toTopOf="parent"
+                android:id="@+id/bookCover" />
             <TextView
                 android:id="@+id/book_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:textStyle="bold"/>
+                android:textStyle="bold"
+                card_view:layout_constraintStart_toEndOf="@id/bookCover"
+                card_view:layout_constraintTop_toTopOf="parent"
+                android:layout_marginStart="8dp"/>
 
             <TextView
                 android:id="@+id/book_price"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/book_title"
                 android:layout_marginTop="10dp"
-                />
+                android:layout_marginStart="8dp"
+                card_view:layout_constraintStart_toEndOf="@id/bookCover"
+                card_view:layout_constraintTop_toBottomOf="@id/book_title"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
-        </RelativeLayout>
     </androidx.cardview.widget.CardView>
 
 </LinearLayout>
